# iecon2025_tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing_windowing_features.ipynb  03_forecasting_models.ipynb  README.md  figure_preparation.ipynb
src/iecon2025_tutorial/: __init__.py  preprocessing.py
