[project]
name = "iecon2025-tutorial"
version = "0.1.0"
description = "DL-based forecasting of energy related time series: tuning, evaluation, and reproducibility"
authors = [
    {name = "Giuseppe La Tona", email = "giuseppe.latona@cnr.it"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["deep learning", "time series", "forecasting", "energy", "tensorflow", "keras"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow==2.19.0",
    "keras==3.10.0",
    "numpy==2.1.0",
    "pandas==2.2.2",
    "matplotlib==3.10.0",
    "scikit-learn==1.6.1",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "ipywidgets==7.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "jupyter>=1.0",
]

[tool.poetry]
name = "iecon2025-tutorial"
version = "0.1.0"
description = "IECON 2025 Tutorial Project"
authors = ["Giuseppe La Tona <giuseppe.latona@cnr.it>"]
readme = "README.md"
packages = [{include = "iecon2025_tutorial", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "2.19.0"
keras = "3.10.0"
numpy = "2.1.0"
pandas = "2.2.2"
matplotlib = "3.10.0"
scikit-learn = "1.6.1"
scipy = "1.16.2"
seaborn = "0.13.2"
plotly = "5.24.1"
ipywidgets = "7.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "dist",
    "build"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true